[tool.poetry]
name = "chillone"
version = "0.1.0"
description = ""
authors = ["Nate <minecraftcrusher100@gmail.com>"]
license = "GPLv3-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
